adding new test path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,7 +191,7 @@ jobs:
       - run:
           name: Install PlayWright tools
           command: |
-            apt-get update apt-get install -y \
+            apt-get update && apt-get install -y \
               libnss3 \
               libatk1.0-0 \
               libatk-bridge2.0-0 \
