MAP-1991 adding first playwright test (#583)
* MAP-1991 adding first test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,6 +113,9 @@ jobs:
           name: Run GotoDashboardTest
           command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" testIntegration --tests=uk.gov.justice.digital.hmpps.pecs.jpc.integration.GotoDashboardTest
       - run:
+          name: Run GotoDashboardAndDownloadSpreadsheetTest
+          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" testIntegration --tests=uk.gov.justice.digital.hmpps.pecs.jpc.integration.GotoDashboardAndDownloadSpreadsheetTest
+      - run:
           name: Run LodgingPriceTest
           command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" testIntegration --tests=uk.gov.justice.digital.hmpps.pecs.jpc.integration.LodgingPriceTest
       - run:
@@ -142,6 +145,92 @@ jobs:
       - store_test_results:
           path: build/test-results
 
+  integration_playwright_tests:
+    docker:
+      - image: cimg/openjdk:21.0-browsers
+        environment:
+          _JAVA_OPTIONS: -Xmx1024m -XX:ParallelGCThreads=2 -XX:ConcGCThreads=2 -XX:ParallelGCThreads=2 -Djava.util.concurrent.ForkJoinPool.common.parallelism=2 -Dorg.gradle.daemon=false
+      - image: postgres:16.4
+        environment:
+            - POSTGRES_PASSWORD=admin_password
+            - POSTGRES_USER=admin
+            - POSTGRES_DB=auth-db
+        command: -p 7432
+      - image: quay.io/hmpps/hmpps-auth:latest
+        environment:
+          - SERVER_PORT=9090
+          - SPRING_PROFILES_ACTIVE=dev,local-postgres,auth-seed
+          - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:7432/auth-db
+      - image: quay.io/hmpps/hmpps-external-users-api:2024-09-23.3630.2e6d15e
+        environment:
+          - SERVER_PORT=8089
+          - SPRING_PROFILES_ACTIVE=dev,local-postgres
+          - API_BASE_URL_OAUTH=http://localhost:9090/auth
+          - SPRING_R2DBC_URL=r2dbc:postgresql://localhost:7432/auth-db?sslmode=prefer
+          - SPRING_FLYWAY_URL=jdbc:postgresql://localhost:7432/auth-db?sslmode=prefer
+      - image: quay.io/hmpps/hmpps-manage-users-api:latest
+        environment:
+          - SERVER_PORT=9091
+          - SPRING_PROFILES_ACTIVE=dev
+          - HMPPS-AUTH_ENDPOINT_URL=http://localhost:9090/auth
+          - EXTERNAL-USERS_ENDPOINT_URL=http://localhost:8089
+          - NOMIS_ENDPOINT_URL=http://nomis-user-roles-api:8080
+          - DELIUS_ENDPOINT_URL=http://community-api:8080
+          - AUTHORIZATION-SERVER_TOKEN_ENDPOINT_URL=http://localhost:9090/auth/oauth/token
+      - image: postgres:16.4
+        environment:
+          POSTGRES_DB: jpc
+          POSTGRES_USER: jpc
+          POSTGRES_PASSWORD: letmein
+        command: -p 5433
+    resource_class: "xlarge"
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/app
+
+      - run:
+          name: Wait for auth
+          command: dockerize -wait http://localhost:9090/auth/health -timeout 1m
+      - run:
+          name: Get wiremock
+          command: curl -o wiremock.jar https://repo1.maven.org/maven2/org/wiremock/wiremock-standalone/3.9.1/wiremock-standalone-3.9.1.jar
+      - run:
+          name: Run wiremock
+          command: java -jar wiremock.jar --port 9999
+          background: true
+      - run:
+          name: Run the java app.
+          command: java -Xmx1024m -jar ~/app/build/libs/calculate-journey-variable-payments-*.jar
+          background: true
+          environment:
+            SPRING_PROFILES_ACTIVE: dev
+            SERVER_SERVLET_SESSION_COOKIE_SECURE: false
+      - run:
+          name: Wait for java app to start
+          command: sleep 20
+      - restore_cache:
+          key: gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
+      - restore_cache:
+          key: gradle-cache-{{ checksum "build.gradle.kts" }}
+      - save_cache:
+          key: gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
+          paths:
+            - /home/circleci/.gradle/wrapper
+      - save_cache:
+          key: gradle-cache-{{ checksum "build.gradle.kts" }}
+          paths:
+            - /home/circleci/.gradle/caches
+      - store_artifacts:
+          path: build/reports/tests/testIntegration
+          destination: integration/fluent
+      - store_test_results:
+          path: build/test-results
+
+      - run:
+          name: Run Playwright Integration Tests
+          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" testPlaywrightIntegration
+
 workflows:
   version: 2
   build-test-and-deploy:
@@ -155,6 +244,9 @@ workflows:
       - integration_tests:
           requires:
             - validate
+      - integration_playwright_tests:
+          requires:
+            - integration_tests
       - hmpps/build_docker:
           name: test_build_docker
           publish: false
@@ -184,6 +276,7 @@ workflows:
             - build_docker
             - helm_lint
             - integration_tests
+            - integration_playwright_tests
       - request-preprod-approval:
           type: approval
           requires:
