--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@7.5.0
+  hmpps: ministryofjustice/hmpps@8.0.0
   browser-tools: circleci/browser-tools@1.4.8
 
 jobs:
@@ -11,6 +11,7 @@ jobs:
       tag: "21.0"
     environment:
       _JAVA_OPTIONS: -Xmx512m -XX:ParallelGCThreads=2 -XX:ConcGCThreads=2 -Djava.util.concurrent.ForkJoinPool.common.parallelism=2 -Dorg.gradle.daemon=false
+      GRADLE_OPTS: "-Dorg.gradle.workers.max=2 -Dorg.gradle.parallel=true"
 
     steps:
       - checkout
@@ -18,6 +19,38 @@ jobs:
           keys:
             - gradle-{{ checksum "build.gradle.kts" }}
             - gradle-
+      - run:
+          name: Install System Dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y \
+            libgtk-4-1 \
+            libgraphene-1.0-0 \
+            libxslt1.1 \
+            libwoff1 \
+            libvpx7 \
+            libevent-2.1-7 \
+            libopus0 \
+            gstreamer1.0-plugins-base \
+            gstreamer1.0-plugins-good \
+            libflite1 \
+            libwebp7 \
+            libavif13 \
+            libharfbuzz-icu0 \
+            libwebpmux3 \
+            libenchant-2-2 \
+            libsecret-1-0 \
+            libhyphen0 \
+            libmanette-0.2-0 \
+            libgles2 \
+            libx264-dev
+      - browser-tools/install-chrome:
+          chrome-version: "latest"
+      - run:
+          name: Check Chrome installation
+          command: |
+            google-chrome --version
+            chromedriver --version
       - run:
           command: ./gradlew build
       - save_cache:
@@ -41,9 +74,9 @@ jobs:
           _JAVA_OPTIONS: -Xmx1024m -XX:ParallelGCThreads=2 -XX:ConcGCThreads=2 -XX:ParallelGCThreads=2 -Djava.util.concurrent.ForkJoinPool.common.parallelism=2 -Dorg.gradle.daemon=false
       - image: postgres:16.4
         environment:
-            - POSTGRES_PASSWORD=admin_password
-            - POSTGRES_USER=admin
-            - POSTGRES_DB=auth-db
+          - POSTGRES_PASSWORD=admin_password
+          - POSTGRES_USER=admin
+          - POSTGRES_DB=auth-db
         command: -p 7432
       - image: quay.io/hmpps/hmpps-auth:latest
         environment:
