--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@7.5.0
-  browser-tools: circleci/browser-tools@1.4.8
+  hmpps: ministryofjustice/hmpps@8.0.0
+  browser-tools: circleci/browser-tools@1.5.3
 
 jobs:
   validate:
@@ -145,7 +145,7 @@ jobs:
 
       - run:
           name: Run Playwright Integration Tests
-          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" testPlaywrightIntegration
+          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" -Dplaywright.test.headless=true testPlaywrightIntegration
 
 workflows:
   version: 2
