--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,9 +139,7 @@ jobs:
             - /home/circleci/.gradle/caches
       - store_artifacts:
           path: build/reports/tests/testPlayWrightIntegration
-          destination: integration/fluent
-      - store_test_results:
-          path: build/test-results
+          destination: build/reports/tests/testPlayWrightIntegration
 
       - run:
           name: Run Playwright Integration Tests
