--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@7.5.0
-  browser-tools: circleci/browser-tools@1.4.8
+  hmpps: ministryofjustice/hmpps@8.0.0
+  browser-tools: circleci/browser-tools@1.5.3
 
 jobs:
   validate:
@@ -77,7 +77,34 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/app
-
+      - run:
+          name: Install System Dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y \
+              libgtk-4-1 \
+              libgraphene-1.0-0 \
+              libxslt1.1 \
+              libwoff1 \
+              libvpx7 \
+              libevent-2.1-7 \
+              libopus0 \
+              gstreamer1.0-plugins-base \
+              gstreamer1.0-plugins-good \
+              libflite1 \
+              libwebp7 \
+              libavif13 \
+              libharfbuzz-icu0 \
+              libwebpmux3 \
+              libenchant-2-2 \
+              libsecret-1-0 \
+              libhyphen0 \
+              libmanette-0.2-0 \
+              libgles2 \
+              libx264-dev \
+              libgstreamer-gl1.0-0 \
+              libgstreamer-plugins-bad1.0-0 \
+              libwebpdemux2
       - run:
           name: Wait for auth
           command: dockerize -wait http://localhost:9090/auth/health -timeout 1m
@@ -110,15 +137,14 @@ jobs:
           key: gradle-cache-{{ checksum "build.gradle.kts" }}
           paths:
             - /home/circleci/.gradle/caches
-      - store_artifacts:
-          path: build/reports/tests/testPlayWrightIntegration
-          destination: integration/fluent
-      - store_test_results:
-          path: build/test-results
-
       - run:
           name: Run Playwright Integration Tests
-          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" testPlaywrightIntegration
+          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" -Dplaywright.test.headless=false testPlaywrightIntegration
+      - store_artifacts:
+          path: build/reports/tests/testPlayWrightIntegration
+          destination: build/reports/tests/testPlayWrightIntegration
+      - store_test_results:
+          path: build/test-results
 
 workflows:
   version: 2
