--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -14,7 +14,13 @@ services:
       retries: 5
       start_period: 2s
       timeout: 3s
-
+  tester:
+    image: curlimages/curl:latest
+    depends_on:
+      - hello
+    entrypoint: [ "sleep", "infinity" ]
+    networks:
+      - app-net
 
 
 networks:
